@@ -11,7 +11,6 @@
       <span class="breadcrumbs" tal:content="structure view/getBreadcrumbsHTML" />
     </h1>
     <h1 id="goto" style="display:none">
-      <input type="hidden" id="api" name="api" value="@@zodbbrowser_path_to_oid" />
       <input type="text" class="goto" id="gotoInput" name="goto"
              tal:attributes="value view/getPath"/>
     </h1>
