@@ -15,6 +15,8 @@ Changes
 
 - Show object size in the header (LP#497780).
 
+- Expand truncated values by clicking on them (LP#931184).
+
 - Update maintainer email in setup.py.
 
 
